deployment/spec/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-todo
  namespace: t1task
  labels:
    app: backend-todo
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: backend-todo
